--- a/downloads/templates/history.html
+++ b/downloads/templates/history.html
@@ -15,13 +15,18 @@
                 <p>You have downloaded {{ songs|length }} song{{ songs|pluralize }}.</p>
                 <ul>
                     {% for song in songs %}
-                    <li>{{ song.title }}</li>
+                    <li>{{ song.title }} (Downloads {{ song.download_count }})</li>
                     <a href="{% static song.local_link %}">Click to Download</a>
                     {% endfor %}
                 </ul>
             {% else %}
                 <p>0 Downloaded Song</p>
             {% endif %}
+            <br>
+            <a href="/downloads/download_page">Download</a>
+            <br>
+            <br>
+            <a href="/downloads/search">Search</a>
         </div>
     </body>
 </html>
