--- a/downloads/templates/download_file.html
+++ b/downloads/templates/download_file.html
@@ -14,7 +14,15 @@
             <p>Your Download Link: <strong>{{ d_link }}</strong>
             <a href="{% static d_link %}">Click to Download</a>
             </p>
+            <br>
+            <a href="/downloads/download_page">Download</a>
+            <br>
+            <br>
             <a href="/downloads/history">History</a>
+            <br>
+            <br>
+            <a href="/downloads/search">Search</a>
+
         </div>
     </body>
 </html>
