--- a/downloads/templates/history.html
+++ b/downloads/templates/history.html
@@ -22,6 +22,8 @@
             {% else %}
                 <p>0 Downloaded Song</p>
             {% endif %}
+            <br>
+            <a href="/downloads/download_page">Download</a>
         </div>
     </body>
 </html>
