--- a/downloads/templates/download_file.html
+++ b/downloads/templates/download_file.html
@@ -14,6 +14,7 @@
             <p>Your Download Link: <strong>{{ d_link }}</strong>
             <a href="{% static d_link %}">Click to Download</a>
             </p>
+            <a href="/downloads/download_page">Download More</a>
             <a href="/downloads/history">History</a>
         </div>
     </body>
