--- a/templates/loginhome.html
+++ b/templates/loginhome.html
@@ -12,7 +12,7 @@
         <div class="main" id="main">
             <div class="headerWrapper">
  				<div class="logo">
- 						<a id="home" href="/"><img src="http://upload.wikimedia.org/wikipedia/commons/3/33/Vanamo_Logo.png" width="30px" height="30px;"></a>&nbsp;&nbsp;&nbsp;&nbsp;
+ 						<a id="home" href="/"><img src="http://upload.wikimedia.org/wikipedia/commons/3/33/Vanamo_Logo.png" width="30px" height="30px"></a>&nbsp;&nbsp;&nbsp;&nbsp;
                         <strong>Hi Anonymous</strong>
  				</div>
  				<div class="navmenu">
