--- a/templates/loginhome.html
+++ b/templates/loginhome.html
@@ -33,7 +33,9 @@
                             <ui class="base">
                                 <!--<img src={{ song.thumbnail }} height="150px" width="100%">-->
                                 <iframe width="100%" height="150px" src={{ song.youtube_link|embed }} frameborder="0" allowfullscreen></iframe>
-                                <strong>{{ song.title }}</strong>
+                                <strong>{{ song.title }}</strong><br>
+                                <p>View Count : {{ song.view_count }}</p>
+                                <p>Download Count : {{ song.download_count }}</p>
                             </ui>
                     {% endfor %}
                 </ul>
